--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.10",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.29",
     "prettier": "^3.0.3"
   }
 }
